Fix issue #126; overflow-x on legal pages

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -328,6 +328,7 @@ nav.navbar {
     background-color: rgba(var(--black), 0.25);
     box-shadow: 0 2px 9px 0 rgba(var(--black), 0.2);
     transition: all 0.5s ease-in-out;
+    min-height: 76px;
 }
 
 #ikg-flags-logo {
